/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/supportCenter" android:title="@string/support_center" />
    <item
        android:id="@+id/kyc"
        android:title="@string/kyc" />
    <item android:title="@string/about" />
    <item android:title="@string/legal_information" />
    <item
        android:id="@+id/logIn"
        android:title="@string/log_in" />
    <item
        android:id="@+id/logOut"
        android:title="@string/log_out" />
</menu>