/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_category_layout">
        <CheckBoxPreference
            android:key="setPin"
            android:layout="@layout/preference_layout_no_icon"
            android:summary="@string/pref_set_pin_summary"
            android:title="@string/pref_set_pin"
            android:widgetLayout="@layout/preference_switch" />

        <CheckBoxPreference
            android:key="requirePinOnStartup"
            android:layout="@layout/preference_layout_no_icon"
            android:summary="@string/pref_pin_require_on_startup_summary"
            android:title="@string/pref_pin_require_on_startup"
            android:dependency="setPin"
            android:widgetLayout="@layout/preference_switch" />

        <CheckBoxPreference
            android:key="randomizePin"
            android:layout="@layout/preference_layout_no_icon"
            android:summary="@string/randomize_pin_text"
            android:title="@string/randomize_pin"
            android:dependency="setPin"
            android:widgetLayout="@layout/preference_switch" />
    </PreferenceCategory>
</PreferenceScreen>