/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/miActivate"
        android:title="@string/lt_activate_menu"/>
        <item
        android:id="@+id/miDeactivate"
        android:title="@string/lt_deactivate_menu"/>
    <item
        android:id="@+id/miEdit"
        android:title="@string/edit"/>
    <item
        android:id="@+id/miDelete"
        android:title="@string/delete"/>

</menu>