/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131418"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:theme="@style/EditText.Theme"
        android:hint="@string/enter_recipient_hint"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvEnterRecipientDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enter_recipient_description"
        android:textColor="#aaa"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvRecipientValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/recipient_valid"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvCheckingFioAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/checking_fio_address"
        android:textColor="#aaa"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvRecipientInvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/recipient_invalid"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvRecipientHasNoSuchAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/recipient_has_no_such_address"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvNoConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bitid_noconnection"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btOk"
        style="@style/MyceliumButton.FIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/button_ok"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvKnownFioNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/fio_address_item" />

</LinearLayout>