/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/page_margin_width"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ext_sig_passphrase_description"/>

    <EditText
            android:id="@+id/etPassphrase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_x2"
        android:theme="@style/EditText.Theme"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"/>

    <CheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ext_sig_show_passphrase"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:text="@string/masterseed_optional_passphrase_hint"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/size_x4"
            >
        <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/size_x2"
                android:text="@string/cancel"

                />

        <Button
                android:id="@+id/btnOkay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/size_x2"
                android:text="@string/ok"
                />

    </LinearLayout>


</LinearLayout>
