/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/verify_backup_dialog_title"
            android:textSize="24sp" />

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify_backup_desc" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" >
        </View>

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify_backup_scan_desc" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp" >
        </View>

        <Button
            android:id="@+id/btScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/scan" />

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify_backup_clipboard_desc" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp" >
        </View>

        <Button
            android:id="@+id/btClipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/clipboard" />

        <TextView
            android:id="@+id/tvNumKeys"
            style="@style/GenericText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" >
        </View>
    </LinearLayout>

</ScrollView>