/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/MyceliumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_address_book_desc"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btScan"
        style="@style/MyceliumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/scan" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <TextView
        style="@style/MyceliumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/clipboard_address_book_desc" />

    <Button
        android:id="@+id/btClipboard"
        style="@style/MyceliumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/clipboard" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

</LinearLayout>