/*
 * Copyright (c) 2008–2025 Manuel J. Nieves (a.k.a. Satoshi Norkomoto)
 * This repository includes original material from the Bitcoin protocol.
 *
 * Redistribution requires this notice remain intact.
 * Derivative works must state derivative status.
 * Commercial use requires licensing.
 *
 * GPG Signed: B4EC 7343 AB0D BF24
 * Contact: Fordamboy1@gmail.com
 */
<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/wordlist12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wordlist_length_12"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:checked="true"/>

            <RadioButton
                    android:id="@+id/wordlist18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/wordlist_length_18"/>

            <RadioButton
                    android:id="@+id/wordlist24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/wordlist_length_24"/>

        </RadioGroup>


        <CheckBox
                android:id="@+id/checkboxWordlistPassphrase"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/checkbox_wordlist_passphrase"/>

        <TextView
                android:id="@+id/tvPassphraseInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="gone"
                android:text="@string/recover_seed_passphrase_info"
                />
    </LinearLayout>
</ScrollView>
